# fpga-mocap

./: README.md
doc/: pinmapping.md
gecko5/hdl/: .gitignore  README.md
host/: README.md  blobPlotter.py  blobReceiver.py  cameraCalibration.py  commandPacket.py  commandSender.py  commander.py  configSender.py  example_camera_config.json  fetchCalibrationData.py  frameReceiver.py  logReceiver.py  numpyArrayEncoder.py  plotTriangulatedData.py  positionCalibration.py  pyproject.toml  triangulate.py
host/deprecated/testscene/: README.md  scene.blend
host/deprecated/triangulate/: camera_calibration.py  draw_overlay.py  pyproject.toml  triangulate.py
mechanical/: Ball Joint Nut.stl  Ball Joint Socket Extension.stl  Ball Joint Socket.stl  Pin TPU.stl  x bar mount.stl
visionAddOn/firmware/: .gitignore  .mxproject  CMakeLists.txt  README.md  build.ninja  visionAddOn.ioc
visionAddOn/firmware/App/: AppBuilder.cpp  AppBuilder.h  c_app_builder.h
visionAddOn/firmware/tools/: frameBufferToImage.py  gray.py  ov5640_pll1.py  ov9281_pll.py  ov9281_window.py  pyproject.toml  rx.py  send_and_receive_message.py
visionAddOn/pcb/: KLT_E4MPF_OV9281_V4_2_NIR.kicad_sch  README.md  bom.csv  camera.kicad_sch  camera.kicad_sch-bak  cameraConnector.kicad_sch  eeprom.kicad_sch  ethernet.kicad_sch  fp-info-cache  fp-lib-table  irLed.kicad_sch  stm32f7.kicad_sch  sym-lib-table  usbHub.kicad_sch  visionAddOn.bak  visionAddOn.kicad_pcb  visionAddOn.kicad_prl  visionAddOn.kicad_pro  visionAddOn.kicad_sch  visionAddOn.kicad_sch-bak  visionAddOn.kicad_sym
visionAddOn/pcb/bom/: ibom.html
(+210 files in other folders)
